# converter_opt1

./: .gitignore  README.md  pyproject.toml
src/cardiff_converter_opt/: __init__.py  __main__.py  cli.py  optimization.py  parameters.py  physics.py
tests/: test_physics.py
