[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiff-converter-opt"
version = "0.1.0"
description = "Python port of Cardiff Uni buck VSI volume–loss optimisation and ANN surrogate"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
cardiff-pareto = "cardiff_converter_opt.cli:main_pareto"
cardiff-train-ann = "cardiff_converter_opt.cli:main_train_ann"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
